# oasis-trading-system

./: .env  .env.example  .env.template  .gitignore  Makefile  README.md  Setup-Environment.ps1  Test-QuickValidation.ps1  Validate-OasisPhase1.ps1  demo.py  demo_sprint2.py  docker-compose.yml  functional_tests.py  functional_tests_poetry.py  generate_proto.sh  package-lock.json  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_backtest.py  run_validation.bat  setup.py  temp_view_main.txt
.github/workflows/: ci-cd.yml  ci.yml
api/proto/: actions.proto  market_data.proto
components/coinbase-connector/: Cargo.toml
components/coinbase-connector/src/: main.rs  schemas.rs
components/data-normalizer/: Cargo.toml
components/data-normalizer/src/: main.rs
components/order-manager/: coinbase.go  go.mod  go.sum  main.go  metrics.go  repository.go
components/risk-engine/: Cargo.toml  build.rs
components/risk-engine/src/: main.rs
components/strategy-framework/: pyproject.toml
components/strategy-framework/src/: consumer.py  run_framework.py  strategy.py
components/strategy-framework/src/strategies/: advanced_profit.py  momentum.py  test_simulator.py
components/strategy-framework/src/tools/: gen_proto.py  send_sample.py  set_strategy_config.py
contracts/: trading_system.proto
control-center/api-backend/: go.mod  go.sum  main.go
control-center/frontend/: package-lock.json  package.json
control-center/frontend/src/app/(auth)/: layout.tsx
control-center/frontend/src/app/(auth)/dashboard/: page.tsx
control-center/frontend/src/app/(auth)/metrics/: page.tsx
control-center/frontend/src/app/(auth)/operations/: page.tsx
control-center/frontend/src/app/(auth)/portfolio/: page.tsx
control-center/frontend/src/app/(auth)/settings/: page.tsx
control-center/frontend/src/app/(auth)/simulations/: page.tsx
control-center/frontend/src/app/(auth)/strategies/: page.tsx
control-center/frontend/src/app/login/: page.tsx
control-center/frontend/src/components/dashboard/: MetricsSection.tsx  OperationsSection.tsx  PortfolioSection.tsx  SettingsSection.tsx  SimulationsSection.tsx  StrategiesSection.tsx
control-center/frontend/src/components/simulations/: SimulationWorkspace.tsx
control-center/frontend/src/lib/: api.ts  types.ts
database/: schema.sql
db/migrations/: 001_initial_schema.sql  002_control_center_orders.sql
docs/: README.md  architecture-overview.md  components.md  development-environment.md
docs/adrs/: 001-component-communication.md
docs/operations/: deployment.md  observability.md
docs/runbooks/: incident-response.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  DashboardView.tsx  PaperView.tsx
infra/monitoring/: prometheus.yml
infrastructure/docker/: Dockerfile.api  Dockerfile.ml  Dockerfile.worker  docker-compose.yml
infrastructure/kubernetes/monitoring/: prometheus.yaml
scripts/: build.sh  gen-proto.ps1  gen-proto.sh  quick-setup.sh
scripts/deployment/: deploy.sh
scripts/sql/: init.sql
src/api/rest/: main.py
src/backtester/: data_provider.py  engine.py
src/common/: db_manager.py  logger.py
src/config/: settings.py
src/contracts_generated/: trading_system_pb2.py  trading_system_pb2.pyi  trading_system_pb2_grpc.py
src/data_snapshot_worker/: Dockerfile  service.py
src/infrastructure/database/postgres/: connection.py
src/infrastructure/monitoring/: logging_config.py
src/order_executor/: Dockerfile  client.py  service.py
src/risk_engine/: Dockerfile  position_manager.py  service.py
src/strategy_engine/: Dockerfile  grid_logic.py  service.py
src/telegram_bot/: Dockerfile  service.py
src/webservice/: Dockerfile  service.py
src/webservice/templates/: index.html
tests/load/: trading_system_load.js
validation/: README.md
validation/reports/: functional_tests_python_20250911_192135.json
