[tool.poetry]
name = "oasis-trading-system"
version = "0.1.0"
description = "Oasis Trading System Core Components"
authors = ["Oasis Labs"]

[tool.poetry.dependencies]
python = "^3.11"
# CORREÇÃO: Usando o nome oficial e correto do pacote: 'coinbase-advanced-py'
coinbase-advanced-py = "^1.0.1"
python-dotenv = "^1.0.1"
grpcio = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
grpcio-tools = "^1.60.0"