[package]
name = "data-normalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rdkafka = { version = "0.34", features = ["tokio", "cmake-build"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"
dotenv = "0.15"
