# File: components/risk-engine/Cargo.toml

[package]
name = "risk-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
lazy_static = "1"

[build-dependencies]
tonic-build = "0.10"
